# toy-language

./: .gitignore  CMakeLists.txt  README.md  main.cpp  toy.txt
AST/: CMakeLists.txt
AST/src/: BinaryExprAST.cpp  BinaryExprAST.h  CallExprAST.cpp  CallExprAST.h  ExprAST.h  FunctionAST.cpp  FunctionAST.h  NumberExprAST.cpp  NumberExprAST.h  PrototypeAST.cpp  PrototypeAST.h  VariableExprAST.cpp  VariableExprAST.h
Codegen/: CMakeLists.txt
Codegen/src/: CodeGen.cpp  CodeGen.h
Error/: CMakeLists.txt
Error/src/: Error.cpp  Error.h
Lexer/: CMakeLists.txt
Lexer/src/: Lexer.cpp  Lexer.h  Token.h
Parser/: CMakeLists.txt
Parser/src/: Parser.cpp  Parser.h
